--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-remote_theme: mmistakes/jekyll-theme-basically-basic
+#remote_theme: mmistakes/jekyll-theme-basically-basic
 
 theme: jekyll-theme-hacker
